--- a/templates/index.html
+++ b/templates/index.html
@@ -3,19 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>{% block titulo %} este es un titulo {% endblock %}</title>
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<h3>Hola mundo</h3>
-
-	<table>
+	{% block cuerpo %}
+	<h3> Hola mundo </h3>
+	<button href="{% url 'crear' %}">nuevo</button>
+     
+	<table border="1">
 		<caption>tabla de personas</caption>
 		<thead>
 			<tr>
 				<th>nombre</th>
 				<th>apellido</th>
 				<th>correo</th>
+				<th>accion</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -24,9 +27,14 @@
 				<td>{{ persona.nombre }}</td>
 				<td>{{ persona.apellido }}</td>
 				<td>{{ persona.correo }}</td>
+				<td>
+					<a href="{% url 'editar' persona.id %}" >editar</a>
+					<a href="{% url 'eliminar' persona.id %}" title="">eliminar</a>
+				</td>
 			</tr>
 			{% endfor %}
 		</tbody>
 	</table>
+	{% endblock cuerpo %}
 </body>
 </html>
